🔧 build shared libs by default when building Python package
🚨 ignore check-wheel-contents warnings

Signed-off-by: burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ git-only = [
 [tool.scikit-build.cmake.define]
 BUILD_MQT_CORE_BINDINGS = "ON"
 BUILD_MQT_CORE_TESTS = "OFF"
+BUILD_SHARED_LIBS = "ON"
 
 [[tool.scikit-build.overrides]]
 if.python-version = ">=3.13"
@@ -107,6 +108,13 @@ cmake.define.DISABLE_GIL = "1"
 
 [tool.setuptools_scm]
 write_to = "src/mqt/core/_version.py"
+
+
+[tool.check-wheel-contents]
+ignore = [
+  "W002", # Wheel contains duplicate files (.so symlinks)
+  "W004", # Module is not located at importable path (/lib/mqt-core-*.so)
+]
 
 
 [tool.pytest.ini_options]
