--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,11 +68,18 @@ ninja.version = ">=1.10"
 # Setuptools-style build caching in a local directory
 build-dir = "build/{wheel_tag}/{build_type}"
 
-# Only build the Python bindings target
-build.targets = ["ir"]
-
-# Only install the Python package component
-install.components = ["mqt-core_Python"]
+# All the targets to build
+build.targets = [
+  "mqt-core-ir",
+  "mqt-core-algorithms",
+  "mqt-core-circuit-optimizer",
+  "mqt-core-dd",
+  "mqt-core-zx",
+  "mqt-core-ds",
+  "mqt-core-na",
+  "mqt-core-python",
+  "ir"
+]
 
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 sdist.include = ["src/mqt/core/_version.py"]
