✨ mqt-core-cli for finding CMake and include paths
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ qiskit = [
 
 [project.scripts]
 mqt-core-dd-compare = "mqt.core.dd.evaluation:main"
+mqt-core-cli = "mqt.core.__main__:main"
 
 [project.urls]
 Homepage = "https://github.com/cda-tum/mqt-core"
