🏁 patch dll directory on Windows
additionally ignore DLLs in wheels for delvewheel repair. Delvewheel cannot find these by default and would error if this was not set.

Signed-off-by: Lukas Burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -253,8 +253,8 @@ environment = { DEPLOY = "ON" }
 environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
 
 [tool.cibuildwheel.windows]
-before-build = "uv pip install delvewheel>=1.7.3"
-repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --namespace-pkg mqt"
+before-build = "uv pip install delvewheel>=1.9.0"
+repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --namespace-pkg mqt --ignore-existing"
 environment = { CMAKE_GENERATOR = "Ninja" }
 
 [[tool.cibuildwheel.overrides]]
