--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -6,9 +6,7 @@ on:
       - main
   pull_request_target:
     types: [opened, reopened, synchronize]
-
-permissions:
-  contents: read
+  merge_group:
 
 jobs:
   update_release_draft:
