--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -15,6 +15,7 @@ categories:
       - "feature"
       - "enhancement"
       - "usability"
+      - "refactor"
   - title: "🐛 Bug Fixes"
     labels:
       - "bug"
@@ -22,21 +23,22 @@ categories:
   - title: "📄 Documentation"
     labels:
       - "documentation"
-  - title: "🤖 CI"
-    labels:
-      - "continuous integration"
   - title: "📦 Packaging"
     labels:
       - "packaging"
   - title: "🧹 Code Quality"
     labels:
       - "code quality"
+  - title: "🤖 CI"
+    labels:
+      - "continuous integration"
   - title: "⬆️ Dependencies"
     collapse-after: 5
     labels:
       - "dependencies"
       - "submodules"
       - "github_actions"
+      - "pre-commit"
 change-template: "- $TITLE @$AUTHOR (#$NUMBER)"
 change-title-escapes: '\<*_&'
 version-resolver:
@@ -50,10 +52,6 @@ version-resolver:
     labels:
       - "patch"
   default: patch
-autolabeler:
-  - label: "dependencies"
-    title:
-      - "/update pre-commit hooks/i"
 
 template: |
   ## 👀 What Changed
