--- a/.github/workflows/draft-pdf.yml
+++ b/.github/workflows/draft-pdf.yml
@@ -5,6 +5,10 @@ on:
       - paper/**
       - .github/workflows/draft-pdf.yml
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   paper:
     runs-on: ubuntu-latest
