--- a/.license-tools-config.json
+++ b/.license-tools-config.json
@@ -3,7 +3,7 @@
     "from_git": false,
     "name": "Chair for Design Automation, TUM"
   },
-  "force_author": false,
+  "force_author": true,
   "license": "MIT",
   "title": false,
   "include": ["**/*"],
