--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,10 +114,14 @@ minversion = "7.2"
 addopts = ["-ra", "--strict-markers", "--strict-config"]
 xfail_strict = true
 filterwarnings = [
-    "error",
-    'ignore:\s.*Pyarrow.*:DeprecationWarning:',
-    'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
-    'ignore:.*no need for these schema-conformant objects.*:DeprecationWarning:', # Qiskit itself imports deprecated code (should be resolved in the 1.2.1 release)
+  "error",
+  'ignore:\s.*Pyarrow.*:DeprecationWarning:',
+  'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
+  # Qiskit 1.2 deprecations
+  'ignore:.*no need for these schema-conformant objects.*:DeprecationWarning:',
+  # Qiskit 1.3 deprecations
+  'ignore:.*``qiskit.dagcircuit.dagcircuit.DAGCircuit.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
+  'ignore:.*``qiskit.circuit.library.standard_gates.x.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
 ]
 log_cli_level = "info"
 testpaths = ["test/python"]
