➕ add `openqasm-pygments` dependency for pretty printing OpenQASM 3 output as part of the documentation
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -277,6 +277,7 @@ docs = [
   "sphinxext-opengraph>=0.9.1",
   "pandas[output-formatting]>=2.1.2",
   "qiskit[qasm3-import,visualization]>=1.0.0",
+  "openqasm-pygments>=0.1.2",
 ]
 test = [
   "pytest>=8.3.3",
