--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
     needs: change-detection
     if: fromJSON(needs.change-detection.outputs.run-cd)
     uses: cda-tum/mqt-workflows/.github/workflows/reusable-python-packaging.yml@v1.5
+    with:
+      # Do not build emulated wheels for mqt-core to avoid issues with PyPI space limitations.
+      build-emulated-wheels: false
 
   required-checks-pass: # This job does nothing and is only used for branch protection
     name: 🚦 Check
