--- a/mlir/CMakeLists.txt
+++ b/mlir/CMakeLists.txt
@@ -1,10 +1,14 @@
 # set required cmake version
-cmake_minimum_required(VERSION 3.19...3.30)
+cmake_minimum_required(VERSION 3.24...3.30)
 
 project(
   mqt-mlir
-  LANGUAGES CXX
+  LANGUAGES C CXX
   DESCRIPTION "MQT MLIR - Interfacing between the Munich Quantum Toolkit and MLIR")
+
+set(CMAKE_CXX_STANDARD
+    17
+    CACHE STRING "C++ standard to conform to")
 
 # Add path for custom modules
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -24,6 +28,7 @@ include(cmake/ExternalDependencies.cmake)
 set(MQT_MLIR_INCLUDE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 # add main library code
+add_subdirectory(include)
 add_subdirectory(src)
 
 # add test code
