--- a/mlir/test/CMakeLists.txt
+++ b/mlir/test/CMakeLists.txt
@@ -1,5 +1,12 @@
-# collect all test files
-file(GLOB_RECURSE TEST_FILES "*.cpp")
+configure_lit_site_cfg(
+  ${CMAKE_CURRENT_SOURCE_DIR}/lit.site.cfg.py.in ${CMAKE_CURRENT_BINARY_DIR}/lit.site.cfg.py
+  MAIN_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/lit.cfg.py)
 
-# add test executable
-package_add_test(mqt-mlir-test MQT::MLIR ${TEST_FILES})
+set(STANDALONE_OPT_TEST_DEPENDS FileCheck count not standalone-opt)
+
+add_lit_testsuite(check-standalone-opt "Running the standalone-opt regression tests"
+                  ${CMAKE_CURRENT_BINARY_DIR} DEPENDS ${STANDALONE_OPT_TEST_DEPENDS})
+set_target_properties(check-standalone-opt PROPERTIES FOLDER "Tests")
+
+add_lit_testsuites(STANDALONE_OPT ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS
+                   ${STANDALONE_OPT_TEST_DEPENDS})
