--- a/mlir/test/CMakeLists.txt
+++ b/mlir/test/CMakeLists.txt
@@ -2,11 +2,10 @@ configure_lit_site_cfg(
   ${CMAKE_CURRENT_SOURCE_DIR}/lit.site.cfg.py.in ${CMAKE_CURRENT_BINARY_DIR}/lit.site.cfg.py
   MAIN_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/lit.cfg.py)
 
-set(STANDALONE_OPT_TEST_DEPENDS FileCheck count not standalone-opt)
+set(QUANTUM_OPT_TEST_DEPENDS FileCheck count not quantum-opt)
 
-add_lit_testsuite(check-standalone-opt "Running the standalone-opt regression tests"
-                  ${CMAKE_CURRENT_BINARY_DIR} DEPENDS ${STANDALONE_OPT_TEST_DEPENDS})
-set_target_properties(check-standalone-opt PROPERTIES FOLDER "Tests")
+add_lit_testsuite(check-quantum-opt "Running the quantum-opt regression tests"
+                  ${CMAKE_CURRENT_BINARY_DIR} DEPENDS ${QUANTUM_OPT_TEST_DEPENDS})
+set_target_properties(check-quantum-opt PROPERTIES FOLDER "Tests")
 
-add_lit_testsuites(STANDALONE_OPT ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS
-                   ${STANDALONE_OPT_TEST_DEPENDS})
+add_lit_testsuites(QUANTUM_OPT ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS ${QUANTUM_OPT_TEST_DEPENDS})
