--- a/mlir/mlir/test/Dialect/MQT/lit.site.cfg.py.in
+++ b/mlir/mlir/test/Dialect/MQT/lit.site.cfg.py.in
@@ -2,11 +2,11 @@
 
 config.llvm_tools_dir = lit_config.substitute("@LLVM_TOOLS_DIR@")
 config.quantum_build_dir = "@CMAKE_BINARY_DIR@"
-config.quantum_test_dir = "@CMAKE_BINARY_DIR@" + "/test"
-config.quantum_bin_dir = "@CMAKE_BINARY_DIR@" + "/tools/quantum-opt"
+config.quantum_test_dir = "@CMAKE_BINARY_DIR@" + "/mlir/test"
+config.quantum_bin_dir = "@CMAKE_BINARY_DIR@" + "/mlir/tools/quantum-opt"
 
 import lit.llvm
 lit.llvm.initialize(lit_config, config)
 
 # Let the main config do the real work.
-lit_config.load_config(config, "@CMAKE_SOURCE_DIR@/test/lit.cfg.py")
+lit_config.load_config(config, "@CMAKE_SOURCE_DIR@/mlir/test/Dialect/MQT/lit.cfg.py")
