🔒 update to latest `uv` version that properly supports dynamically versioned packages
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -269,6 +269,7 @@ test-command = "python -c \"from mqt import core\""
 
 
 [tool.uv]
+required-version = ">=0.5.20"
 reinstall-package = ["mqt-core"]
 
 [tool.uv.sources]
