🎨 Add Unary Op class

--- a/mlir/include/mlir/Dialect/MQTOpt/IR/CMakeLists.txt
+++ b/mlir/include/mlir/Dialect/MQTOpt/IR/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_mlir_dialect(MQTOptOps mqtopt)
+# add_mlir_interface(MQTOptOps)
 add_mlir_doc(MQTOptOps MLIRMQTOptDialect Dialects/ -gen-dialect-doc)
