♻️ refactor QASM import functionality and remove deprecated formats
- ♻️ turn QASM parser into its own library
- 🔥 remove import functionality from `QuantumComputation`
  the respective functionality is now provided by a separate `MQT::CoreQASM` library
- ♻️ refactor QASM parser and improve imports

Signed-off-by: burgholzer <burgholzer@me.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,9 @@ endif()
 # add the IR package
 add_subdirectory(ir)
 
+# add the QASM package
+add_subdirectory(qasm3)
+
 # add the algorithms package
 add_subdirectory(algorithms)
 
