➕ avoid building an old numpy version from scratch in the minimums session on Python 3.13
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -308,6 +308,7 @@ test = [
   "pandas[output-formatting]>=2.1.2",
   "pandas[output-formatting]>=2.2.3; python_version >= '3.13'",
   "qiskit[qasm3-import]>=1.0.0",
+  "numpy>=2.1; python_version >= '3.13'",
 ]
 dev = [
   {include-group = "build"},
