--- a/pyproject.toml
+++ b/pyproject.toml
@@ -297,7 +297,7 @@ docs = [
   "pandas[output-formatting]>=2.1.2",
   "qiskit[qasm3-import,visualization]>=1.0.0",
   "openqasm-pygments>=0.1.2",
-  "breathe>=4.36.0",
+  "doxysphinx>=3.3.12; python_version < '3.13'",
   "graphviz>=0.20.3",
   "sphinx>=7.4.7",
   "sphinx>=8.1.3; python_version >= '3.10'",
