🙈 exclude `paper` and `eval` from sdist
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,9 @@ sdist.exclude = [
     "**/.github",
     "**/doc",
     "**/docs",
+    "**/eval",
     "**/meta",
+    "**/paper",
     "**/plots",
     "**/test",
     "**/tests",
