📝 Add JOSS paper (#869)
## Description

This PR adds the code for the JOSS paper "MQT Core: The Backbone of the
Munich Quantum Toolkit (MQT)" to the `main` branch.

## Checklist:

<!---
This checklist serves as a reminder of a couple of things that ensure
your pull request will be merged swiftly.
-->

- [x] The pull request only contains commits that are related to it.
- [x] I have added appropriate tests and documentation.
- [x] I have made sure that all CI jobs on GitHub pass.
- [x] The pull request introduces no new warnings and follows the
project's style guidelines.

---------

Signed-off-by: burgholzer <burgholzer@me.com>
Signed-off-by: Daniel S. Katz <d.katz@ieee.org>
Co-authored-by: Daniel S. Katz <d.katz@ieee.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,9 @@ sdist.exclude = [
     "**/.github",
     "**/doc",
     "**/docs",
+    "**/eval",
     "**/meta",
+    "**/paper",
     "**/plots",
     "**/test",
     "**/tests",
@@ -231,6 +233,7 @@ default.extend-ignore-re = [
 wille = "wille"
 anc = "anc"
 mch = "mch"
+ket = "ket"
 
 
 [tool.repo-review]
